Thu Jul 21 19:27:19 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* node.c (dump_node): add today's knowledge.  "init arguments (m)" and
	  "init arguments (p)" of compile.c indicates a Ruby code that
	  evaluates multiple assignments that is in method or block
	  parameters:  def foo((m1,m2), (m3,m4), *r, (p1,p2), (p3,p4)); end
	  The former (init arguments (m)) evaluates the multiple assignments
	  before rest argument, that are (m1,m2) and (m3,m4).  The letter
	  (init arguments (p)) does ones after rest argument, that are
	  (p1,p2) and (p3, p4).

Thu Jul 21 18:11:07 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_inject): remove empty line to notify rdoc
	  Enumerable#reduce is alias. patched by milki@github.
	  https://github.com/ruby/ruby/pull/26

Thu Jul 21 17:30:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_delete_at_m): use simple array literal in rdoc.
	  patched by samuel tonini. [ruby-core:38310] [Bug #5066]

Thu Jul 21 17:14:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#each):
	  Allow HTTP/0.9 request which doesn't has any header or body.
	  patched by Felix Jodoin. [ruby-core:38040] [Bug #5022]

Wed Jul 20 23:02:18 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_update_max_fd): remove parentheses. they are not in
	  macro.

Wed Jul 20 22:22:23 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_update_max_fd): declaration moved from
	  internal.h.

	* file.c: ditto.

	* io.c: call rb_update_max_fd for each new fds.

	* process.c: ditto.

	* random.c: ditto.

	* ruby.c: ditto.

	* ext/io/console/console.c: ditto.

	* ext/openssl/ossl_bio.c: ditto.

	* ext/pty/pty.c: ditto.

	* ext/socket/init.c: ditto.

	* ext/socket/socket.c: ditto.

	* ext/socket/ancdata.c: ditto.

	* ext/socket/unixsocket.c: ditto.

Wed Jul 20 15:16:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/handle.c (dlhandle_sym): clear previous error with dlerror()