@@ -1,3 +1,13 @@
+Thu Jul 21 20:02:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* thread.c (set_trace_func, thread_set_trace_func_m): reset tracing
+	  state when set_trace_func hook is removed.  This is workaround patch
+	  to force to reset tracing state that is broken by continuation call.
+	  a patch from James M. Lawrence.  [Feature #4347] [ruby-core:34998]
+
+	* test/ruby/test_continuation.rb (class TestContinuation): add a test
+	  for above.  a patch from James M. Lawrence.
+
 Thu Jul 21 19:27:19 2011  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* node.c (dump_node): add today's knowledge.  "init arguments (m)" and
